# django-authx

./: .env.example  .gitignore  Instraction.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
config/: settings.py  urls.py
src/authx/: admin.py  apps.py  backends.py  checks.py  conf.py  email_utils.py  exceptions.py  managers.py  models.py  otp.py  permissions.py  receivers.py  serializers.py  signals.py  urls.py  user_model.py  utils.py  views.py
src/authx/migrations/: 0001_initial.py
